[gd_scene load_steps=6 format=2]

[ext_resource path="res://Cenas/Fases/Fase 2/Hexagon-PNG-Image.png" type="Texture" id=1]
[ext_resource path="res://Personagens/Jose/Jose.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cenas/Fases/Fase 2/Fase2.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.6666, 81.6667 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36.6666, 18.3333 )

[node name="Node2D" type="Node2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 553.333, 416.667 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Bridge0" type="StaticBody2D" parent="."]
position = Vector2( 3.33333, 93.3333 )

[node name="Wood" type="ColorRect" parent="Bridge0"]
visible = false
margin_left = 513.0
margin_top = 40.0
margin_right = 587.0
margin_bottom = 203.0
color = Color( 0.333333, 0.211765, 0.105882, 1 )

[node name="Ghost" type="ColorRect" parent="Bridge0"]
visible = false
margin_left = 513.0
margin_top = 40.0
margin_right = 587.0
margin_bottom = 203.0
color = Color( 0.333333, 0.211765, 0.105882, 0.388235 )

[node name="Blockade" type="CollisionShape2D" parent="Bridge0"]
position = Vector2( 550, 121.667 )
shape = SubResource( 1 )

[node name="Plate0" type="Area2D" parent="Bridge0"]
position = Vector2( 1.19209e-06, -1.52588e-05 )

[node name="1" type="CollisionShape2D" parent="Bridge0/Plate0"]
position = Vector2( 550, 226.667 )
shape = SubResource( 2 )

[node name="2" type="CollisionShape2D" parent="Bridge0/Plate0"]
position = Vector2( 550, 16.6667 )
shape = SubResource( 2 )

[node name="Bridge1" type="StaticBody2D" parent="."]
position = Vector2( 550, -223.333 )
rotation = 1.0472

[node name="Wood" type="ColorRect" parent="Bridge1"]
visible = false
margin_left = 513.0
margin_top = 40.0
margin_right = 587.0
margin_bottom = 203.0
color = Color( 0.333333, 0.211765, 0.105882, 1 )

[node name="Ghost" type="ColorRect" parent="Bridge1"]
visible = false
margin_left = 513.0
margin_top = 40.0
margin_right = 587.0
margin_bottom = 203.0
color = Color( 0.333333, 0.211765, 0.105882, 0.388235 )

[node name="Blockade" type="CollisionShape2D" parent="Bridge1"]
position = Vector2( 550, 121.667 )
shape = SubResource( 1 )

[node name="Plate1" type="Area2D" parent="Bridge1"]

[node name="1" type="CollisionShape2D" parent="Bridge1/Plate1"]
position = Vector2( 550.955, 225.718 )
shape = SubResource( 2 )

[node name="2" type="CollisionShape2D" parent="Bridge1/Plate1"]
position = Vector2( 548.579, 16.5 )
shape = SubResource( 2 )

[node name="Jose" parent="." instance=ExtResource( 2 )]
position = Vector2( 266.667, 230 )

[connection signal="body_entered" from="Bridge0/Plate0" to="." method="_on_Plate0_body_entered"]
[connection signal="body_exited" from="Bridge0/Plate0" to="." method="_on_Plate0_body_exited"]
[connection signal="body_entered" from="Bridge1/Plate1" to="." method="_on_Plate1_body_entered"]
[connection signal="body_exited" from="Bridge1/Plate1" to="." method="_on_Plate1_body_exited"]
